--- a/community/soygec/awards.html
+++ b/community/soygec/awards.html
@@ -12,13 +12,11 @@ sitemap: community
     Information on how to nominate a member of the soybean community for an award can be found <a href="nominate.html">here</a>.
 </p>
 
-
-
-<h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded">Mary Coker Joslin Early Career Award</h4>
+<h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded uk-text-bolder">Mary Coker Joslin Early Career Award</h4>
 <div>
     <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@m uk-margin uk-border-rounded uk-flex-middle" uk-grid>
         <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
-            <img src="https://legacy.soybase.org/images/Awards_MC_Joslin.png" alt="">
+            <img src="https://data.soybase.org/annex/Glycine/max/images/soygec/Awards_MC_Joslin.png" alt="Mary Coker Joslin" >
         </div>
         <div>
             <div class="uk-card-body">
@@ -31,6 +29,33 @@ sitemap: community
             <div class="uk-card-footer">
                 <ul class="uk-list">
                     <li>2023 - Anna Locke, USDA-ARS, Raleigh, NC</li>
+                </ul>  
+            </div>
+        </div>
+    </div>
+</div>
+<br />
+
+
+<h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded uk-text-bolder">Richard (Dick) Bernard Mid-Career Award</h4>
+<div>
+    <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@m uk-margin uk-border-rounded uk-flex-middle" uk-grid>
+        <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
+            <img src="https://data.soybase.org/annex/Glycine/max/images/soygec/Awards_R_Bernard.png" alt="Richard (Dick) Bernard" >
+        </div>
+        <div>
+            <div class="uk-card-body">
+                <p>
+                    Dr. Bernard was a USDA-ARS Research Geneticist at the University of Illinois who made immense contributions to soybean genetics and breeding including developing the Clark and Harosoy near-isogenic line collections, 
+                    and the development of Williams, a soybean line that occupied a substantial portion of USA acerage in the 1970s. 
+                    Those contributions continue to be utilized by soybean geneticists, breeders and growers today.
+                </p>
+            </div>
+            <div class="uk-card-footer">
+                <ul class="uk-list">
+                    <li>2022 - Kristin Bilyeu, USDA-ARS, Columbia, Missouri</li>
+                    <li>2022 - Jianxin Ma, Purdue University</li>
+                    <li>2023 - Robert Stupar, University of Minnesota</li>
                 </ul>  
             </div>
         </div>
