--- a/community/soygec/awards.html
+++ b/community/soygec/awards.html
@@ -61,3 +61,31 @@ sitemap: community
         </div>
     </div>
 </div>
+<br />
+
+<h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded uk-text-bolder">William J. Morse Career Achievement Award</h4>
+<div>
+    <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@m uk-margin uk-border-rounded uk-flex-middle" uk-grid>
+        <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
+            <img src="https://data.soybase.org/annex/Glycine/max/images/soygec/Awards_WJ_Morse.png" alt="Richard (Dick) Bernard" >
+        </div>
+        <div>
+            <div class="uk-card-body">
+                <p>
+                    In 1907, William Morse was hired by the USDA as a breeder working with grasses, legumes, and new forage plants, making him the first USDA soybean breeder. 
+                    Morse was one of the founders of the American Soybean Association and oversaw the expansion of soybean from 1,629 acres in 1909 to 15 millions acres in 1943.
+                    <br />
+                    One of his greatest contributions was participating in the Dorsett and Morse expedition in 1929, a 2-year excursion to China to collect soybean varieties and learn about soybean growing and processing. 
+                    The expedition returned with 4,451 varieties, 22% of which are still in the USDA germplasm collection, including over 100 varieties of edamame, which was not previously known in the US.
+                </p>
+            </div>
+            <div class="uk-card-footer">
+                <ul class="uk-list">
+                    <li>2022 - Brian Diers, University of Illinois</li>
+                    <li>2022 - Lila Vodkin, University of Illinois</li>
+                    <li>2023 - Anne Dorrance, The Ohio State University</li>
+                </ul>  
+            </div>
+        </div>
+    </div>
+</div>
