--- a/community/soygec/awards.html
+++ b/community/soygec/awards.html
@@ -12,9 +12,26 @@ sitemap: community
     Information on how to nominate a member of the soybean community for an award can be found <a href="nominate.html">here</a>.
 </p>
 
+
+<div class="uk-flex uk-flex-column uk-flex-center@m uk-width-3-4@m" uk-grid>
+
+    <div class="uk-card uk-card-default uk-card-body">Item 1</div>
+    <div class="uk-card uk-card-default uk-card-body uk-margin-top">Item 2</div>
+    <div class="uk-card uk-card-default uk-card-body uk-margin-top">Item 3</div>
+</div>
+
+
+
+
+
+
+
+
+
+
 <h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded uk-text-bolder">Mary Coker Joslin Early Career Award</h4>
 <div>
-    <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@m uk-margin uk-border-rounded uk-flex-middle" uk-grid>
+    <div class="uk-card uk-card-default uk-grid-large uk-child-width-1-2@m uk-margin uk-border-rounded uk-flex-middle">
         <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
             <img src="https://data.soybase.org/annex/Glycine/max/images/soygec/Awards_MC_Joslin.png" alt="Mary Coker Joslin" >
         </div>
@@ -39,7 +56,7 @@ sitemap: community
 
 <h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded uk-text-bolder">Richard (Dick) Bernard Mid-Career Award</h4>
 <div>
-    <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@m uk-margin uk-border-rounded uk-flex-middle" uk-grid>
+    <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@m uk-margin uk-border-rounded uk-flex-middle uk-grid">
         <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
             <img src="https://data.soybase.org/annex/Glycine/max/images/soygec/Awards_R_Bernard.png" alt="Richard (Dick) Bernard" >
         </div>
@@ -65,7 +82,7 @@ sitemap: community
 
 <h4 class="uk-background-primary uk-padding-small uk-light uk-border-rounded uk-text-bolder">William J. Morse Career Achievement Award</h4>
 <div>
-    <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@m uk-margin uk-border-rounded uk-flex-middle" uk-grid>
+    <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@m uk-margin uk-border-rounded uk-flex-middle uk-grid">
         <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
             <img src="https://data.soybase.org/annex/Glycine/max/images/soygec/Awards_WJ_Morse.png" alt="Richard (Dick) Bernard" >
         </div>
@@ -74,6 +91,7 @@ sitemap: community
                 <p>
                     In 1907, William Morse was hired by the USDA as a breeder working with grasses, legumes, and new forage plants, making him the first USDA soybean breeder. 
                     Morse was one of the founders of the American Soybean Association and oversaw the expansion of soybean from 1,629 acres in 1909 to 15 millions acres in 1943.
+                    <br />
                     <br />
                     One of his greatest contributions was participating in the Dorsett and Morse expedition in 1929, a 2-year excursion to China to collect soybean varieties and learn about soybean growing and processing. 
                     The expedition returned with 4,451 varieties, 22% of which are still in the USDA germplasm collection, including over 100 varieties of edamame, which was not previously known in the US.
