remove from sitemap

--- a/community/soygec/awards.html
+++ b/community/soygec/awards.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Community
-sitemap: community
+title: Soybean Community Awards
+sitemap: false
 ---
 
 <h2>Soybean Community Awards</h2>
