--- a/community/sbw/SBW/SBW_2011.html
+++ b/community/sbw/SBW/SBW_2011.html
@@ -54,17 +54,19 @@ sitemap: community/sbw
             <tr><td>Larry Purcell, Univ. of Arkansas</td><td>Nitrogen Fixation, N Remobilization, and Seed Yield among Soybean NILs for Maturity</td></tr>
 			<tr><td>R. Ford Denison Univ. of Minnesota</td><td>Breeding Soybean for More Efficient Symbiosis: a Darwinian Perspective</td></tr>
 			<tr><th colspan='2'>Sesion: Drought Tolerance | Chair: Tommy Carter, USDA-ARS</th></tr>
-            (START HERE)
-
-			<tr><td>Phillip Roberts, Univ. Georgia</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Roberts.pdf">Southeast: Kudzu Bug</a><br><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/VID_20110930_143901.m4v">Video 1</a><br><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/VID_20110930_143943.m4v">Video 2</a></td></tr>
-			<tr><td>Jeremy Greene, Clemson Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Greene.pdf">Southeast: Kudzu Bug</a></td></tr>
-			<tr><td>Andrea Cardinal, North Carolina State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Cardinal.pdf">Stink Bugs White Paper</a></td></tr>
-			<tr><th colspan='2'>Sesion: Aphids | Chair: Dechun Wang, Michigan State Univ.</th></tr>
-			<tr><td>Susannah Cooper, Monsanto Co.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Cooper.pdf">Soybean Aphid Biotypes: Understanding Geographic Distribution (2008-2010)</a></td></tr>
-			<tr><td>Matt O'Neal, IA State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/ONeal2.pdf">Is One Enough?: Combining Rag Genes Improves Aphid Resistance in Soybeans</a></td></tr>
-			<tr><td>Brian Diers, Univ. Illinois at Urbana-Champaign</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Diers.pdf">Fine Mapping Rag1 and Rag2 and the Evaluation of New Aphid Resistance Sources</a></td></tr>
-			<tr><td>Dechun Wang, Michigan State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Wang.pdf">Fine Mapping Rag3 and Rag4 Aphid Resistance Genes</a></td></tr>
-			<tr><td>Rouf Mian, USDA-ARS, Ohio State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Mian.pdf">Mapping and Characterization of a New Soybean Aphid Resistant Gene in PI 567301B</a></td></tr>
+			<tr><td>Jim Orf, Univ. of Minnesota</td><td>Drought Tolerance Breeding in the Midwest</td></tr>
+			<tr><td>Grover Shannon, Univ. of Missouri</td><td>Drought Tolerance Breeding in the Mid-South</td></tr>
+			<tr><td>Tom Sinclair, N.C. State Univ</td><td>Challenges in Using Physiological and Molecular Traits to Breed for Drought Tolerance</td></tr>
+			<tr><td>Jeff Habben, Pioneer Hi-Bred</td><td>The Use of Transgenes to Improve Performance in Maize: An Industry Perspective</td></tr>
+			<tr><td>Tommy Carter, USDA-ARS</td><td>Drought Tolerance Breeding in the Southeast</td></tr>
+			<tr><th colspan='2'>Sesion: Advances in Seed Composition | Chair: Kristin Bilyeu, USDA-ARS</th></tr>
+			<tr><td>Grover Shannon, Univ. of Missouri</td><td>High Oleic Soybean Oil</td></tr>
+			<tr><td>Emily Dierking & Bill Rhodes, Schillinger Genetics</td><td>Adjusting Soybean Seed Carbohydrates to Meet Market Needs</td></tr>
+			<tr><td>Federico Tripodi, Monsanto</td><td>A good thing that just got better: Soybeans rich in SDA Omega-3 Oil</td></tr>
+			<tr><td>Steve Schnebly, Pioneer</td><td>High Oleic Soybean – performance, feedback, and applications</td></tr>
+			<tr><td>Monica Schmidt, Danforth Center</td><td>The Production of Nutraceutical Carotenoids in Transgenic Soybean Seeds</td></tr>
+			<tr><th colspan='2'>Sesion: Production Systems | Chair: Glenn Bowers, Syngenta Seeds Inc.</th></tr>
+			
 			<tr><td>Andy Michel, Ohio State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Michel.pdf">Molecular Interactions Between Soybean Aphid and Resistant Soybean</a></td></tr>
 		</body>
 	</table>
