--- a/community/sbw/SBW/SBW_2011.html
+++ b/community/sbw/SBW/SBW_2011.html
@@ -66,14 +66,16 @@ sitemap: community/sbw
 			<tr><td>Steve Schnebly, Pioneer</td><td>High Oleic Soybean – performance, feedback, and applications</td></tr>
 			<tr><td>Monica Schmidt, Danforth Center</td><td>The Production of Nutraceutical Carotenoids in Transgenic Soybean Seeds</td></tr>
 			<tr><th colspan='2'>Sesion: Production Systems | Chair: Glenn Bowers, Syngenta Seeds Inc.</th></tr>
-			
-			<tr><td>Andy Michel, Ohio State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Michel.pdf">Molecular Interactions Between Soybean Aphid and Resistant Soybean</a></td></tr>
+			<tr><td>Shawn Conely, Univ. of Wisconsin</td><td>Soybean Trait Needs for the Midwest:  The musings of an agronomist</td></tr>
+			<tr><td>Al Hoggard, Syngenta Seeds Inc</td><td>Challenges of Breeding for and Producing Soybeans in the South</td></tr>
+			<tr><td>Glenn Bowers, Syngenta Seeds</td><td>Soybean Production Systems in Argentina and Brazil</td></tr>
+			<tr><td>Tom Sinclair, N.C. State Univ.</td><td>Hey Kids, Growing Soybeans in 2050!</td></tr>
 		</body>
 	</table>
 </div>			
 
 
-<h3>Wednesday, February 29, 2012</h3>
+<h3>Wednesday, February 23, 2011</h3>
 <div class="uk-overflow-auto">
 	<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
     	<thead>
@@ -83,17 +85,19 @@ sitemap: community/sbw
         	</tr>
     	</thead>
 		<body>
-			<tr><th colspan='2'>Session: Public Breeder Coordination Session</th></tr>
-			<tr><td>Perry Cregan, USDA-ARS, Beltsville</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Cregan.pdf">Update on SNP Genotyping of the USDA Soybean Germplasm Collection</a></td></tr>
-			<tr><td>George Graef, Univ. Nebraska</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Graef.pdf">Soybean Genomics Strategic Plan: Accomplishments and Updates</a></td></tr>
-			<tr><td>Tommy Carter, USDA-ARS, Raleigh</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Carter.pdf">ARS Update (Including Status of Analytical Services)</a></td></tr>
-			<tr><td>Jeff Thompson, Pioneer Hi-Bred</td><td>Soybean Germplasm Committee Report</td></tr>
-			<tr><td>Istvan Rajcan, Univ. Guelph</td><td>Soybean Genetics Committee Report</td></tr>
-			<tr><td>David Grant, USDA-ARS, Ames</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Grant.pdf">SoyBase Update &amp; Tutorials</a></td></tr>
-			<tr><td>Group Discussion from the Floor to David Grant</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Grant2.pdf">Resequencing Data</a><br>
-			How will soybean breeders use resequencing data?</br>
-				What tools are needed to enable this?
-			</td></tr>
+			<tr><td>David Hyten, USDA-ARS</td><td>Update on SNP Genotyping of the USDA Soybean Germplasm Collection</td></tr>
+			<tr><td>Roger Boerma, Univ. of Georgia</td><td>Genome Strategic  Planning Paper</td></tr>
+			<tr><td>Katy Martin Rainey, Virginia Tech</td><td>Low Phytate – Can We Solve the Germ Problem?</td></tr>
+			
+			<tr><td>From the Floor</td><td>Retirements & Announcements
+											<br />Gary Ablett remembered
+											<br />Tadesse Mebrahtu remembered
+											<br />Josh Stanton remembered</td></tr>
+			<tr><td>Vince Pantalone, Univ. of Tennessee</td><td>Soybean Germplasm Committee Report</td></tr>
+			<tr><td>David Hyten, USDA-ARS</td><td>Soybean Genetics Committee Report</td></tr>
+			<tr><td>Randy Nelson, USDA-ARS</td><td>Genetic  Diversity Survey</td></tr>
+			<tr><td>Jim Specht, Univ. of Nebraska</td><td>Abiotic Stress Tolerance Breeding survey</td></tr>
+			<tr><td>Vince Pantalone, Univ. of Tennessee</td><td>Adjourn</td></tr>
 		</body>
 	</table>
 </div>	
