--- a/community/sbw/SBW/SBW_2011.html
+++ b/community/sbw/SBW/SBW_2011.html
@@ -26,13 +26,13 @@ sitemap: community/sbw
     	</thead>
 		<body>
 			<tr><td>Vince Pantalone, Univ. of Tennessee</td><td>Welcome and Announcements</td></tr>
-			<tr><td>Carol  Bonin & Brian Diers, Univ. of Illinois</td><td>Decades of Yield Progress in the North</td></tr>
-			<tr><td>Roger Boerma, Univ. of Georgia</td><td>Decades of Yield Progress in the South</td></tr>
+			<tr><td>Carol  Bonin & Brian Diers, Univ. of Illinois</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2011/Bonin.pdf">Decades of Yield Progress in the North</a></td></tr>
+			<tr><td>Roger Boerma, Univ. of Georgia</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2011/Boerma.pdf">Decades of Yield Progress in the South</a></td></tr>
             <tr><td>Joe Burton, USDA-ARS</td><td>Heterosis in Soybean: can it be useful in breeding? (Or have I been wasting my time?)</td></tr>
-			<tr><td>Bill Beavis, Iowa State Univ.</td><td>Breeding Strategies in an Era of Molecular Information</td></tr>
+			<tr><td>Bill Beavis, Iowa State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2011/Beavis.pdf">Breeding Strategies in an Era of Molecular Information</a></td></tr>
 			<tr><td>Bill Beavis & Tommy Carter</td><td>Group Discussion from the floor: Burning Issues in Plant Breeding Methods</td></tr>
 			<tr><td>Brian Diers, Univ. of Illinois</td><td>Nested Association Mapping in Soybean: population development and planned experiments</td></tr>
-            <tr><td>Kent Burkey, USDA-ARS</td><td>Soybean Ancestors as Sources of Tolerance to Ozone and other Abiotic Stresses</td></tr>
+            <tr><td>Kent Burkey, USDA-ARS</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2011/Burkey.pdf">Soybean Ancestors as Sources of Tolerance to Ozone and other Abiotic Stresses</a></td></tr>
             <tr><td>Kip Culler, Missouri farmer</td><td>Farmer Philosophy on High Yielding Environments</td></tr>
             <tr><td>Seth L. Naeve, Univ. of Minnesota</td><td>Non-GMO variety pipeline</td></tr>
 		</body>
@@ -50,7 +50,7 @@ sitemap: community/sbw
     	</thead>
 		<body>
 			<tr><th colspan='2'>Session: Soybean Physiology | Chair: Jeff Ray, USDA-ARS</th></tr>
-			<tr><td>Lisa Ainsworth, USDA-ARS</td><td>Adapting Soybean to the Future Climate</td></tr>
+			<tr><td>Lisa Ainsworth, USDA-ARS</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2011/Ainsworth.pdf">Adapting Soybean to the Future Climate</a></td></tr>
             <tr><td>Larry Purcell, Univ. of Arkansas</td><td>Nitrogen Fixation, N Remobilization, and Seed Yield among Soybean NILs for Maturity</td></tr>
 			<tr><td>R. Ford Denison Univ. of Minnesota</td><td>Breeding Soybean for More Efficient Symbiosis: a Darwinian Perspective</td></tr>
 			<tr><th colspan='2'>Sesion: Drought Tolerance | Chair: Tommy Carter, USDA-ARS</th></tr>
@@ -68,7 +68,7 @@ sitemap: community/sbw
 			<tr><th colspan='2'>Sesion: Production Systems | Chair: Glenn Bowers, Syngenta Seeds Inc.</th></tr>
 			<tr><td>Shawn Conely, Univ. of Wisconsin</td><td>Soybean Trait Needs for the Midwest:  The musings of an agronomist</td></tr>
 			<tr><td>Al Hoggard, Syngenta Seeds Inc</td><td>Challenges of Breeding for and Producing Soybeans in the South</td></tr>
-			<tr><td>Glenn Bowers, Syngenta Seeds</td><td>Soybean Production Systems in Argentina and Brazil</td></tr>
+			<tr><td>Glenn Bowers, Syngenta Seeds</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2011/Bowers.pdf">Soybean Production Systems in Argentina and Brazil</a></td></tr>
 			<tr><td>Tom Sinclair, N.C. State Univ.</td><td>Hey Kids, Growing Soybeans in 2050!</td></tr>
 		</body>
 	</table>
@@ -86,9 +86,8 @@ sitemap: community/sbw
     	</thead>
 		<body>
 			<tr><td>David Hyten, USDA-ARS</td><td>Update on SNP Genotyping of the USDA Soybean Germplasm Collection</td></tr>
-			<tr><td>Roger Boerma, Univ. of Georgia</td><td>Genome Strategic  Planning Paper</td></tr>
+			<tr><td>Roger Boerma, Univ. of Georgia</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2011/Boerma2.pdf">Genome Strategic Planning Paper</a></td></tr>
 			<tr><td>Katy Martin Rainey, Virginia Tech</td><td>Low Phytate – Can We Solve the Germ Problem?</td></tr>
-			
 			<tr><td>From the Floor</td><td>Retirements & Announcements
 											<br />Gary Ablett remembered
 											<br />Tadesse Mebrahtu remembered
@@ -96,7 +95,7 @@ sitemap: community/sbw
 			<tr><td>Vince Pantalone, Univ. of Tennessee</td><td>Soybean Germplasm Committee Report</td></tr>
 			<tr><td>David Hyten, USDA-ARS</td><td>Soybean Genetics Committee Report</td></tr>
 			<tr><td>Randy Nelson, USDA-ARS</td><td>Genetic  Diversity Survey</td></tr>
-			<tr><td>Jim Specht, Univ. of Nebraska</td><td>Abiotic Stress Tolerance Breeding survey</td></tr>
+			<tr><td>Jim Specht, Univ. of Nebraska</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2011/Abiotic_Stress_SBW_2011.pdf">Abiotic Stress Tolerance Breeding survey</a></td></tr>
 			<tr><td>Vince Pantalone, Univ. of Tennessee</td><td>Adjourn</td></tr>
 		</body>
 	</table>
