--- a/community/soygec/awards.html
+++ b/community/soygec/awards.html
@@ -13,7 +13,7 @@ sitemap: false
 </p>
 
 
-<div class="uk-margin-remove uk-grid-collapse" uk-grid>
+<div class="uk-margin-remove uk-grid-collapse uk-flex-center" uk-grid>
 
     <div class="uk-width-3-4@m">
         <div class="uk-margin-large-bottom uk-card uk-card-default">
