--- a/community/soygec/awards.html
+++ b/community/soygec/awards.html
@@ -4,7 +4,7 @@ title: Soybean Community Awards
 sitemap: false
 ---
 
-<h2>Soybean Community Awards</h2>
+<h2>SoyGEC Soybean Career Awards</h2>
 
 <p class="uk-margin-large-bottom">
     The <a href="index.html">Soybean Genomics Executive Committee (SoyGEC)</a> has established career awards for individuals conducting research impacting US soybeans. 
