--- a/community/soygec/nominate.html
+++ b/community/soygec/nominate.html
@@ -4,7 +4,7 @@ title: Nomination Information
 sitemap: false
 ---
 
-<h2>SoyGEC Community Awards Nomination Information</h2>
+<h2>SoyGEC Career Awards Nomination Information</h2>
 
 <p class="uk-margin-large-bottom">
     All nomination packets should be for a living individual and must include a nomination letter summaring why nominee is an outstanding candidate for the award and two letters of support (2 page max for each letter), with one letter from someone outside the soybean community. 
@@ -17,7 +17,7 @@ sitemap: false
 </p>
 
 
-<div class="uk-margin-remove uk-grid-collapse" uk-grid>
+<div class="uk-margin-remove uk-grid-collapse uk-flex-center" uk-grid>
 
     <div class="uk-width-3-4@m">
         <div class="uk-margin-large-bottom uk-card uk-card-default">
