--- a/tools/alleles/index.html
+++ b/tools/alleles/index.html
@@ -165,6 +165,8 @@ web_components: true
 function setAlert(value) {
   document.getElementById("alert").removeAttribute("hidden");
   document.getElementById("alert").textContent = value;
+  document.getElementById("loading-spinner").style.display="none";
+
 }
 
 
@@ -189,7 +191,8 @@ function onChange(){
     document.getElementById("synopsis").textContent = value.description || "No description available.";
   } catch (error) {
     console.error("Error parsing JSON from variantCollection: ", error);
-    document.getElementById("synopsis").textContent = "Invalid selection data.";
+    //document.getElementById("synopsis").textContent = "Invalid selection data.";
+    setAlert("Invalid selection data.");
   }
 }
 
@@ -265,7 +268,10 @@ async function getData() {
 
       getDataFromFastA(chromosome,collectionName,start,stop, geneName);
   })
-  .catch(error => console.log('error', error));
+  .catch(error =>  {
+    console.log('error', error)
+    setAlert(error)
+  });
 
 }
 
@@ -347,7 +353,10 @@ async function getDataFromFastA(chromosome,collectionName,start,stop,geneName) {
             input.value = '';
             
             })
-            .catch(error => console.log('error', error))      
+            .catch(error =>  {
+              console.log('error', error)
+              setAlert(error);
+            }); 
     }
 
     async function getDataFastAWithChrom(){
@@ -423,7 +432,10 @@ async function getDataFromFastA(chromosome,collectionName,start,stop,geneName) {
               input.value = '';
               
               })
-              .catch(error => console.log('error', error))   
+              .catch(error =>  {
+                console.log('error', error)
+                setAlert(error);
+              });
       }
    
     }
