--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -8,7 +8,7 @@ sitemap: community/sbw
 <div class="uk-panel">
   <img class="uk-align-right uk-margin-remove-adjacent" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/SBW_logo.png" width="300" height="175" alt="Soybean Breeder Workshop Logo">
   <h5 class="uk-heading-small uk-margin-remove-vertical">2026 Soybean Breeders Workshop</h5>
-  <h6 class="uk-heading-small uk-margin-remove-top">Physiology</h6>
+  <h6 class="uk-heading-small uk-margin-remove-top">Physiology and Breeding Innovations</h6>
 
   <p class="uk-margin-remove-vertical">February 16 - 18, 2026</p>
   <p class="uk-margin-remove-vertical">Hilton St. Louis Frontenac</p>
