--- a/community/sbw/SBW/posters2025.html
+++ b/community/sbw/SBW/posters2025.html
@@ -48,7 +48,16 @@ sitemap: community/sbw
             <div class="uk-accordion-content">
                 <p><b>Mining novel QTLs for insect resistance from wild soybean</b></p>
                 <p>
-                    NEED ABSTRACT
+			In 2022, soybean [Glycine max] yield losses and management costs caused by insects  in the U.S. totaled over $1.4 billion. 
+			Control can be achieved by using genes for increased plant resistance to leaf-chewing insects, which can minimize the need for insecticide applications and protect yield. 
+			Wild soybean [G. soja] has untapped genetic diversity that can serve as a source of insect resistance for breeders to complement the resistance found in G. max. 
+			Thus, 112 accessions comprising the soja core collection were screened for resistance to leaf-chewing insects. 
+			Lack of preference was evaluated in a greenhouse using soybean loopers [Chrysodeixis includens], and through an open infestation of Mexican bean beetles [Epilachna varivestis] in the field. 
+			Two years of field data were gathered, and the second year of greenhouse data is currently being generated. G24-W751 was the most resistant accession in the field studies, averaging 5.7% defoliation. 
+			This accession is over twice as resistant as the most resistant Glycine max check, Benning EMGH, which contains four stacked QTLs for defoliator resistance and averaged 12.2% defoliation. 
+			Additionally, G24-W751 was also the most resistant accession in greenhouse testing performed thus far. 
+			Haplotypes deduced from SoySNP50k chip data suggest that G24-W751 may have the two largest insect resistance QTL, M and E, but no other known QTLs for defoliator resistance that would explain the enhanced resistance.  
+			A biparental mapping population is being developed to identify novel QTLs from this wild accession."
                 </p>
             </div>
     </li>
@@ -63,7 +72,17 @@ sitemap: community/sbw
             <div class="uk-accordion-content">
                 <p><b>Characterizing Novel Alleles for Effective Resistance Against Soybean Cyst Nematode</b></p>
                 <p>
-                    NEED ABSTRACT
+			Soybean cyst nematode (SCN) is a destructive pathogen of soybean responsible for annual yield loss exceeding $1.5 billion in the United States. 
+			In this study, we aimed to identify novel resistance genes/alleles for several SCN populations and reveal allelic variation underlying identified candidate genes. 
+			To this end, we conducted genome-wide association studies (GWAS) on a panel of advanced breeding lines and cultivars from the University of Missouri’s northern and southern soybean breeding programs, as well as material evaluated in the USDA Uniform Soybean Trials – Northern Region. 
+			Additionally, we developed Soybean Structural Variant (SV) Navigator which visualizes short-read alignment files to enable identification of SVs lost in the variant-calling pipelines. 
+			Through GWAS, we identified quantitative trait nucleotides (QTNs) associated with SCN resistance on chromosomes 2, 8, 11, 14, 17, and 18. 
+			QTNs located on chromosomes 8, 11, and 18 matched previously identified Rhg4, Rhg2, and Rhg1 SCN resistance genes, respectively. Within QTN02, we were able to confirm a recently identified GmSNAP02 resistance gene and observe the allelic polymorphisms for this gene using Soybean SV Navigator. 
+			For QTN14, we determined GmSNAP14 as a candidate gene due to its proximity with the QTN. 
+			Using Soybean SV Navigator, we were able to identify two unique resistance alleles containing SVs for GmSNAP14. 
+			Overall, this study identifies novel alleles underlying resistance against virulent SCN populations. 
+			Furthermore, we provide a tool to identify SVs from short-read alignment data. 
+			Insights from this study help understand the landscape of SCN resistance and elucidate the gene combinations required for resistance.
                 </p>
             </div>
     </li>
