Fix issue wiht data persisting in modals after closing.

--- a/tools/alleles/index.html
+++ b/tools/alleles/index.html
@@ -236,6 +236,8 @@ pre_selected_gene: Wm82.gnm4.div.Song_Hyten_2015
     }
     document.getElementById("loading-spinner").style.display = "block";
     document.getElementById("alert").setAttribute("hidden", true);
+    document.getElementById("modal-gene-name").textContent = "";
+    document.getElementById("region-searched").textContent = "";
     UIkit.modal('#modal').hide();
   }
 
