--- a/community/soy_biennial/index.html
+++ b/community/soy_biennial/index.html
@@ -47,6 +47,7 @@ sitemap: community/soy_biennial
           <a href="https://data.soybase.org/annex/Glycine/max/meetings/soy_biennial/agendas/2000_SOY_biennial.pdf" target="_blank">2000</a>
           <a href="https://data.soybase.org/annex/Glycine/max/meetings/soy_biennial/agendas/2002_SOY_biennial.pdf" target="_blank">2002</a>
           <a href="https://data.soybase.org/annex/Glycine/max/meetings/soy_biennial/agendas/2004_SOY_biennial.pdf" target="_blank">2004</a>
+          <a href="https://data.soybase.org/annex/Glycine/max/meetings/soy_biennial/agendas/2006_SOY_biennial.pdf" target="_blank">2006</a>
           <a href="https://data.soybase.org/annex/Glycine/max/meetings/soy_biennial/agendas/2014_SOY_biennial.pdf" target="_blank">2014</a>
           <a href="https://data.soybase.org/annex/Glycine/max/meetings/soy_biennial/agendas/2018_SOY_biennial.pdf" target="_blank">2018</a>
           <a href="https://data.soybase.org/annex/Glycine/max/meetings/soy_biennial/agendas/2022_SOY_biennial.pdf" target="_blank">2022</a>
