--- a/community/soy_biennial/index.html
+++ b/community/soy_biennial/index.html
@@ -35,7 +35,8 @@ sitemap: community/soy_biennial
 
   <div class="uk-card uk-card-default uk-margin-large">
     <div class="uk-card-header uk-text-bold uk-card-primary uk-padding-small">
-      <h3>Soybean Biennial Conference Agenda Archive</h3>
+      <h3 class="uk-margin-small-bottom">Soybean Biennial Conference Agenda Archive</h3>
+      <h5 class="uk-margin-small-top">PDFs of the Agendas can be downloaded from the links below</h5>
     </div>
       <div class="uk-padding">
         <div uk-grid>
