--- a/community/jobs/index.html
+++ b/community/jobs/index.html
@@ -18,7 +18,7 @@ sitemap: community/Jobs
             <div class="uk-card-body"> 
                 The University of Tennessee in Knoxville, Tennessee is seeking applications for the position of Assistant Professor of Soybean Breeder and Genetics.
                 This is a 9-month tenure track position with 75% Research and 25% teaching. 
-                More information about the position description and required qualifications can be found <a href="2025_06_24_Soybean_Breeder_Geneticist.pdf" target="_blank"><b>here</b></a>. 
+                Download a PDF version of the position annoucement with a more detailed position description and required qualifications <a href="2025_06_24_Soybean_Breeder_Geneticist.pdf" target="_blank"><b>here</b></a>. 
                 <br><br>
                 The application must contain: 
                 <ul class="uk-list uk-list-decimal">
