Change to production api url

--- a/tools/grin/index.html
+++ b/tools/grin/index.html
@@ -3,7 +3,7 @@ layout: default
 title: GRIN Data Explorer
 sitemap: tools/grin
 examples: PI 88818, PI 92743, PI 89061
-api-base: http://10.0.0.10:3000
+api-base: https://GRIN.soybase.org
 ---
 
 <!-- DataTables and jQuery CSS/JS -->
